Arreglando URL de imgs en el Index.html

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <main id="cont-main">
             <section class="cont-sections margin-top">
                 <h4 class="margin-buttom">Nuestro Blog</h4>
-                <img class="img-blog" src="../img/blog1.jpg" alt="Imagen de granos de café 4k">
+                <img class="img-blog" src="img/blog1.jpg" alt="Imagen de granos de café 4k">
                 <h4 class="margin-top">Tipos de Grano de Café</h4>
                 <p>Lorem ipsum dolor sitamet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
                 <button class="button">LEER ENTRADA</button>
                 <hr>
             </section>
             <section class="cont-sections margin-top">
-                <img class="img-blog" src="../img/blog2.jpg" alt="Imagen de una taza café con cubiertos, postres, unas gafas y platos">
+                <img class="img-blog" src="img/blog2.jpg" alt="Imagen de una taza café con cubiertos, postres, unas gafas y platos">
                 <h4 class="margin-top">3 Deliciosas Recetas de Café</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
@@ -75,7 +75,7 @@
                 <hr>
             </section>
             <section class="cont-sections margin-top">
-                <img class="img-blog" src="../img/blog3.jpg" alt="Imagen de taza de café con granaos de café al rededor">
+                <img class="img-blog" src="img/blog3.jpg" alt="Imagen de taza de café con granaos de café al rededor">
                 <h4>Beneficios del Café</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
