Enlazando las entradas a los botones"LEER ENTRADA"

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 <img class="img-blog" src="img/blog1.jpg" alt="Imagen de granos de café 4k">
                 <h4 class="margin-top">Tipos de Granos de Café</h4>
                 <p>Lorem ipsum dolor sitamet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
-                <button class="button">LEER ENTRADA</button>
+                <a href="pages-blog/tipos-de-granos.html">
+                    <button class="button" url="pages">LEER ENTRADA</button>
+                </a>
                 <hr>
             </section>
             <section class="cont-sections margin-top">
@@ -71,7 +73,9 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
                 </p>
-                <button class="button">LEER ENTRADA</button>
+                <a href="pages-blog/deliciosas-recetas.html">
+                    <button class="button" url="pages">LEER ENTRADA</button>
+                </a>
                 <hr>
             </section>
             <section class="cont-sections margin-top">
@@ -80,7 +84,9 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
                 </p>
-                <button class="button">LEER ENTRADA</button>
+                <a href="pages-blog/beneficios-cafe.html">
+                    <button class="button" url="pages">LEER ENTRADA</button>
+                </a>
                 
             </section>
         </main>
