Corrigiendo enlace al index de las entradas

--- a/pages-blog/beneficios-cafe.html
+++ b/pages-blog/beneficios-cafe.html
@@ -24,7 +24,7 @@
 <body>
     <div class="hero">
         <header class="header contenedor">
-            <span class="logo"><a href="index.html"> Blogde<strong>Café</strong></a></span>
+            <span class="logo"><a href="../index.html"> Blogde<strong>Café</strong></a></span>
             <nav class="header-nav">
                 <ul id="nav-ul">
                     <li><a class="nav-ul-li_a" href="nosotros.html">Nosotros</a></li>
