Añadiendo alerta a boton "Mas info"

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <h4 class="h4-brown">Técnicas de Extracción de Café</h4>
                 <p class="margin-top"><strong>Precio:</strong>  Gratis</p>
                 <p><strong>Cupo:</strong>  20</p>
-                <button class="button">MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</button>
+                <button class="button" onclick="alert('Proximamene')">MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</button>
                 <hr>
             </section>
             <section>
                 <h4 class="h4-brown">4 Recetas de Café para Principiantes</h4>
                 <p class="margin-top"><strong>Precio:</strong>  Gratis</p>
                 <p><strong>Cupo:</strong>  20</p>
-                <button class="button">MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</button>
+                <button class="button" onclick="alert('Proximamene')">MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</button>
                 <hr>
             </section>       
         </aside>
