Añadiendo CEO y OPEN GRAPGH

--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,21 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preload" href="css/style-nosotros.css" as="style">
     <link rel="stylesheet" href="css/style-nosotros.css">
-    <!-- OPEN GRAPH-->
+    
+    <meta name="robots" content="index, follow">
+    <!--Ceo-->
+    <meta name="author" content="Moisés Sardinha">
+    <meta name="description" content="Blog web sobre el café donde encontraras consejos, beneficios, cursos y más datos curiosos del mismo.">
+    <meta name="keywords" content="Café, beneficios del café, cursos café, como hacer café, tasas de café, de donde viene el café, cafes el magnifico, café en el embarazo">
+    <link rel="canolical" href="https://sitesafemoi.github.io/blogdeCafe">
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Blog de Café">
+    <meta property="og:site_name" content="Blog de Café - Nosotros">
+    <meta property="description" content="Blog web sobre el café donde encontraras consejos, beneficios, cursos y más datos curiosos del mismo.">
+    <meta property="og:image" content="https://sitesafemoi.github.io/blogdeCafe/img/nosotros.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image:alt" content="Tasas de café"> 
+    <meta property="og:url" content="https://sitesafemoi.github.io/blogdeCafe/nosotros.html" />
     <title>Blog de Café - Nosotros</title>
 </head>
 <body>
