--- a/pages-blog/deliciosas-recetas.html
+++ b/pages-blog/deliciosas-recetas.html
@@ -18,7 +18,21 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="../css/normalize.css">
-    <!-- OPEN GRAPH-->
+
+    <meta name="robots" content="index, follow">
+    <!--Ceo-->
+    <meta name="author" content="Moisés Sardinha">
+    <meta name="description" content="Blog web de Café, aquí aprenderás deliciosas recetas que puedes preparar con el café. ">
+    <meta name="keywords" content="Café, beneficios del café, cursos café, como hacer café, tasas de café, de donde viene el café, cafes el magnifico, café en el embarazo">
+    <link rel="canolical" href="https://sitesafemoi.github.io/blogdeCafe">
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Blog de Café">
+    <meta property="og:site_name" content="Blog de Café - 3 Deliciosas Recetas de Café">
+    <meta property="description" content="Blog web de Café, aquí aprenderás deliciosas recetas que puedes preparar con el café. ">
+    <meta property="og:image" content="https://sitesafemoi.github.io/blogdeCafe/img/blog2.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image:alt" content="Tasas de café">
+    <meta property="og:url" content="https://sitesafemoi.github.io/blogdeCafe/pages-blog/deliciosas-recetas.html"/> 
     <title>Blog de Café - 3 Deliciosas Recetas de Café</title>
 </head>
 <body>
