--- a/pages-blog/deliciosas-recetas.html
+++ b/pages-blog/deliciosas-recetas.html
@@ -16,7 +16,7 @@
     <!-- Preload -->
     <link rel="preload" href="../style.css" as="style">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="preload" href="../css/normalize.css" as="style">
     <link rel="stylesheet" href="../css/normalize.css">
 
     <meta name="robots" content="index, follow">
