Actualizando URL en el Footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <section class="cont-proyectos">
                 <p>Front End Blog by Moises Sardinha © Todos los derechos Reservados 2023.</p>
                 <p>Otros proyectos:</p>
-                <a id="a-footer" href="https://sitesafemoi.github.io/moises-proyecto1/" target="_blank" style="color:#5f9ea0">Sito web "Freelancer"</a> <br>
+                <a id="a-footer" href="https://sitesafemoi.github.io/web-freelancer/" target="_blank" style="color:#5f9ea0">Sito web "Freelancer"</a> <br>
                 <a id="a-footer"	 href="https://sitesafemoi.github.io/web-autos/" target="_blank" style="color:#5f9ea0">Sito web "Autos"</a> <br>
                 <a id="a-footer" href="https://sitesafemoi.github.io/annie-brice-ecomerce/" target="_blank" style="color:#5f9ea0">Sito web "Annie & Brice - Ecomerce"</a>
             </section>    
