--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p>Front End Blog by Moises Sardinha © Todos los derechos Reservados 2023.</p>
                 <p>Otros proyectos:</p>
                 <a id="a-footer"	 href="https://sitesafemoi.github.io/porfolio-moi/" target="_blank" style="color:#5f9ea0">Mi porfolio</a> <br>
-                <a id="a-footer" href="https://sitesafemoi.github.io/annie-brice-ecomerce/" target="_blank" style="color:#5f9ea0">Sito web "Annie & Brice - Ecomerce"</a>
+                <a id="a-footer" href="https://sitesafemoi.github.io/annie-brice-ecomerce/" target="_blank" style="color:#5f9ea0">Sito web "Annie & Brice - Ecomerce"</a> <br>
                 <a id="a-footer"	 href="https://sitesafemoi.github.io/web-autos/" target="_blank" style="color:#5f9ea0">Sito web "Autos"</a> <br>
                 <a id="a-footer" href="https://sitesafemoi.github.io/web-freelancer/" target="_blank" style="color:#5f9ea0">Sito web "Freelancer"</a> <br>
             </section>    
