cambiando id del text-area

--- a/contacto.html
+++ b/contacto.html
@@ -88,7 +88,7 @@
 
             <div class="campo-label">
                 <label class="cont-form-label" for="text-area"  >Mensaje</label>
-                <textarea name="text-area" id="text-area" cols="30" rows="10" required
+                <textarea name="text-area" id="mensaje" cols="30" rows="10" required
                 ></textarea>
             </div>
             <input class="button button-submit" type="submit">
@@ -112,6 +112,6 @@
             </section>      
         </div>    
     </footer>
-    
+    <script src="js/scripts.js"></script>
 </body>
 </html>
