fixing bugs in the font preload

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="prefetch" href="nosotros.html" as="document">
 
     <!-- Fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
+    <!-- <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font"> -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- Preload -->
     <link rel="preload" href="css/style.css" as="style">
